test/tests/NonParameterizedGeneric3.expected
NonParameterizedGeneric3.frost:1:1: error: 'frost.collections.Array' expected 1 generic argument, but found 0
1 error
